--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <li>@mihi_tr</li>
       </ul>
       <img class="centered" src="images/CC-by.png" />
+      <p>slides: https://github.com/mihi-tr/inklink-slides</p>
      </article>
 
     </section>
